# sys-shred

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md
.github/: SECURITY.md  dependabot.yml
.github/workflows/: aur-publish.yml  ci.yml  publish.yml
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs  tests.rs
src/cli/: args.rs  mod.rs
src/core/: metadata.rs  mod.rs  overwrite.rs  report.rs  unlink.rs
src/error/: mod.rs
src/ui/: mod.rs  progress.rs  styles.rs
