[package]
name = "sys-shred"
version = "0.2.1"
edition = "2021"
authors = ["V1lleneuve <v1lleneuve@proton.me>"]
description = "A professional, secure file erasure (anti-forensics) CLI tool."
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
rand = "0.8"
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
tempfile = "3.8"
walkdir = "2.4"
