[package]
name = "sys-shred"
version = "0.4.0"
edition = "2021"
authors = ["V1lleneuve <v1lleneuve@proton.me>"]
description = "A professional, secure file erasure (anti-forensics) CLI tool."
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
rand = "0.8"
indicatif = "0.18"
log = "0.4"
env_logger = "0.11"
tempfile = "3.8"
walkdir = "2.4"
rayon = "1.8"
globset = "0.4"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }
