[package]
name = "sys-shred"
version = "1.2.1"
edition = "2021"
authors = ["V1lleneuve <v1lleneuve@proton.me>"]
description = "A forensic-grade, multi-threaded command-line utility for secure file erasure and anti-forensics."
license = "MIT"
repository = "https://github.com/v1lleneuve/sys-shred"
homepage = "https://github.com/v1lleneuve/sys-shred"
documentation = "https://github.com/v1lleneuve/sys-shred#readme"
readme = "README.md"
keywords = ["security", "forensics", "cli", "erasure", "shred"]
categories = ["command-line-utilities", "os", "filesystem"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "2.0"
rand = "0.8"
indicatif = "0.18"
log = "0.4"
env_logger = "0.11"
tempfile = "3.8"
walkdir = "2.4"
rayon = "1.8"
globset = "0.4"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
console = "0.16"
lazy_static = "1.4"
libc = "0.2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }
dialoguer = "0.12"
